Closed Bug 36784 Opened 24 years ago Closed 24 years ago

Running Mac installer results in crash.

Categories

(Core Graveyard :: Installer: XPInstall Engine, defect, P1)

PowerPC
Mac System 9.x
defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: depman1, Assigned: samir_bugzilla)

References

Details

(Keywords: smoketest, Whiteboard: [dogfood+] sgehani's target fix date: 05/04)

Attachments

(3 files)

Mac only. afternoon build 2000-04-21-13-M16.
1. Download "MozillaInstaller-M16" from 
ftp://sweetlou/products/client/seamonkey/macos/8.x/ppc/2000-04-21-13-M16/
2. Install from "Mozilla Installer - M16" folder.
3. Double click on Mozilla Installer.
4. Press Accept.
5. Press Continue (twice).
6. Press Install.
Result: It shows "Extracting installer files" in the progress dialog. A few 
seconds later, we get a crash: "Application unexpectantly quit, because an error 
of type 3 occurred." No talkback available.
Expected: Complete installation.
Don's nsIFile changes landed at 13:05 pm so this very well could have caught the 
changes mid-checkin.  Let's wait for Monday's official builds.  Re-test and 
report results.  If the crash persists let's revisit this.
This is occurring with build 2000042408
will attach stack crawl
samir, can you take a look at this crash?
Assignee: cathleen → sgehani
Keywords: smoketest
Mac Commercial installer is crashing also-same build
Return addresses on the stack point to XPI_Init (a xpistub entry point).  

Grace,
Are we seeing this crash on Win32 and/or Linux?
Also, can you please attach a stack crawl (type 'sc' in MacsBug once you crash 
into it).  (The attachment above only contains the return addresses.)  Thanks.
Status: NEW → ASSIGNED
Priority: P3 → P1
Target Milestone: --- → M16
I am seeing an error on Win Installer-  see bug 36962,
-229 error, failing at install of XPInstall engine

on Linux - it appears to install despite a core dump after the messages about 
removing directories- haven't written that up yet
changed QA contact to GBush.
QA Contact: jimmylee → gbush
Putting on [dogfood+] radar.
Whiteboard: [dogfood+]
Here is stack crawl for later build on 4/24
On Netscape6 installer- no download is done- installer starts with 'extracting 
files' as in Moz installer
Attached file sc from MacsBugs
XPIStub horkage fixes checked in.  However, the XPInstall engine still looks 
like it is not installing correctly.  The installer will remain horked till the 
engine is fixed.  Will follow up with a dependency bug number.
Depends on: 37075
Fixes to 37075 resolve this.  In conjunction with my xpistub changes, the Mac 
installer is now fixed and should work in tomorrow's builds.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
MacInstaller  is failing - downloads, extracts and dies
build 2000-04-27-08M16
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Investigating... again.
Status: REOPENED → ASSIGNED
Whiteboard: [dogfood+] → [dogfood+] sgehani's target fix date: 04/28
Reproduced with last three nightly builds, MacOS 8.6. Exactly as described in the 
original report.
The autoregistration of interfaces (new code) in the context of xpistub is 
assuming things about the components directory.  This problem was masked by the 
XPInstall engine and xpistub bustage.  That makes a total of three areas that 
were horked for the Mac installer this week.  Two have been resolved (xpistub 
and XPInstall engine horkage) and the third (autoregostration of interfaces) 
should be fixed shortly yielding a working Mac installer by the beginning of 
next week.  

(Similar horkage was observed in the Linux installer earlier this week.  
Hopefully this will fix Linux too.  The autoregistration of interfaces problem 
did not manifest on Windows because we do extra black magic before calling 
xpistub -- change cwd.)
Fixes checked in.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago24 years ago
Resolution: --- → FIXED
Attached file sctack crawl on 5/2
Mozilla Installer and Netscape Installer crashing at end of navigator install 
portion (typical install) build 2000-05-02-08M16
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Samir, can this be related to the fact that there is no "Component Registry" in 
xpcom.xpi ?
If so, you can add a dependency to bug #24312
JJ,
I don't think so.  
Status: REOPENED → ASSIGNED
Whiteboard: [dogfood+] sgehani's target fix date: 04/28 → [dogfood+] sgehani's target fix date: 05/04
Grace,
These are the return addresses.  Can you type "sc" in teh debugger and log the 
stack crawl when you get a chance.  Thanks.
The mozilla installer installs xpcom.xpi alone just fine.
It crashes after browser.xpi has finalized the last file.
sc gives me nothing: message says CurStackBase does not seem to apply- dumping 
4k
OK, this is the third distinct bug that is being tracked here, for the record.  
It appears to be memory corruption during the XPInstall engine run on a .xpi 
with a large number of files (~1,000).
This bug is fixed.  The XPInstall engine dies at the end of browser.xpi's 
finalize phase even in the browser context.  David opened bug 37957 regarding 
this new crasher.  Marking this fixed and adding a dependency on 37957.

This bug can be verified by installing just mail.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago24 years ago
Depends on: 37957
Resolution: --- → FIXED
No longer depends on: 37957
Depends on: 37957
but Navigator always installed! Will have to wait to verify
Use the Mozilla Installer and uncheck Navigator in the Components dialog.
we can definately check against the mozilla installer :-)  to see that Samir's 
fix is working.

However, I agree with Grace, that we really can't mark this verified, till we 
check with commercial build, which is currently masked/blocked by another bug.  
(after all, that's what we're shipping  :-)  )
Both Grace and I verified this against today's commercial and Mozilla 
installers. builds 2000-05-09-08.
Status: RESOLVED → VERIFIED
OS: Mac System 9.x
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: