Partial fix for nsIFile/Mac installer horkage [b=36784]